# racemus

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.ps1  coverage.ps1  docker-start.sh  generate-key.ps1  package-windows.ps1  server.toml
.devcontainer/: Dockerfile  devcontainer.json
.etc/: logo.afdesign
.github/actions-rs/: grcov.yml
.github/k8s/: deployment.yml
.github/workflows/: cd.yml  ci.yml  rd.yml
racemus/: Cargo.toml
racemus-binary/: Cargo.toml
racemus-binary/src/: error.rs  lib.rs  reader.rs  var_vec.rs  writer.rs
racemus-binary/src/circular/: mod.rs
racemus-binary/src/nbt/: macros.rs  mod.rs  reader.rs  value.rs  writer.rs
racemus-binary/src/nbt/test-data/: nbt-byte-1.in  nbt-byte-array-1.in  nbt-compound-empty-1.in  nbt-compound-single-1.in  nbt-double-1.in  nbt-float-1.in  nbt-hello-world.in  nbt-int-1.in  nbt-int-array-1.in  nbt-list-byte-1.in  nbt-list-empty-1.in  nbt-long-1.in  nbt-long-array-1.in  nbt-short-1.in  nbt-string-1.in
racemus-binary/src/proto/: login.rs  mod.rs  open.rs  packet_ids.rs  play.rs  reader.rs  status.rs  writer.rs
racemus-binary/src/proto/test-data/: arr-char-1.in  arr-u8-1.in  login-disconnect-1.in  login-encryption-request-1.in  login-encryption-response-1.in  login-start-1.in  login-success-1.in  open-handshake-1.in  open-http-get-1.in  open-http-ok-1.in  packet-compressed.in  play-disconnect-1.in  play-held-item-change-1.in  play-join-game-1.in  play-plugin-1.in  play-server-difficulty-1.in  status-info-response-1.in  status-pong-1.in
racemus-binary/src/test-data/: fix-float-1.in  fix-signed-1.in  fix-unsigned-1.in  var-signed-16-1.in  var-signed-32-1.in  var-signed-64-1.in  var-unsigned-16-1.in  var-unsigned-32-1.in  var-unsigned-64-1.in
racemus-buffer/: Cargo.toml
racemus-buffer/src/: lib.rs
racemus-mc/: Cargo.toml
racemus-mc/src/: lib.rs
racemus-mc/src/api/: error.rs  mod.rs  models.rs
racemus-mc/src/api/session/: mod.rs
racemus-proto/: Cargo.toml
racemus-proto/src/: lib.rs
racemus-proto/src/minecraft/: login.rs  mod.rs  models.rs  open.rs  play.rs  status.rs
racemus-proto/src/nbt/: mod.rs
racemus-tools/: Cargo.toml
racemus-tools/src/: lib.rs
racemus-tools/src/crypto/: insecure.rs
racemus-tools/src/crypto/test-data/: decrypt_in.in  decrypt_out.in  server_rsa.in  server_rsa_d.in  server_rsa_n.in
racemus-tools/src/task/: mod.rs
racemus/src/: main.rs
racemus/src/config/: mod.rs
racemus/src/connection/: mod.rs  models.rs
racemus/src/controllers/: mod.rs
racemus/src/controllers/player/: mod.rs
racemus/src/controllers/server/: mod.rs
racemus/src/models/: mod.rs
src/: main.rs
src/chat/: mod.rs
src/config/: mod.rs
src/connection/: messages.rs  mod.rs  models.rs
src/connection/protocol/: login.rs  mod.rs  open.rs  play.rs  status.rs
src/controllers/: mod.rs
src/controllers/player/: mod.rs
src/controllers/server/: mod.rs
src/crypto/: insecure.rs  mod.rs
src/models/: light.rs  mod.rs
src/mojang/: api.rs  chat.rs  mod.rs
src/protocol/: extensions.rs  login.rs  mod.rs  open.rs  protocol_error.rs  status.rs  writers.rs
src/protocol/packet/: login.rs  mod.rs  open.rs
src/sim/: client.rs  messages.rs  mod.rs  types.rs
src/sync/: mod.rs
