[package]
name = "racemus"
version = "0.0.1"
authors = ["Jonathan Dickinson <oss@jcdickinson.me>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
circular = "0.3"
ring = "0.16"
untrusted = "0.7.0"
num = "0.2"
rand = "0.7"
http = "0.2"
url = "2.1"
serde_json = "1.0"
aes = "0.3"
cfb8 = "0.3"
stream-cipher = "0.3"
surf = "1.0.3"

[dependencies.async-std]
version = "1.5"
features = ["attributes", "unstable"]
