[package]
name = "racemus"
version = "0.0.1"
authors = ["Jonathan Dickinson <oss@jcdickinson.me>"]
edition = "2018"

[dependencies]
log = "0.4.8"
pretty_env_logger = "0.4.0"
circular = "0.3.0"
ring = "0.16.11"
untrusted = "0.7.0"
num = "0.2.1"
rand = "0.7.3"
http = "0.2.0"
url = "2.1"
serde_json = "1.0"
aes = "0.3.2"
cfb8 = "0.3.2"
stream-cipher = "0.3.2"
surf = "1.0"
async-trait = "0.1.24"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0.104"

[dependencies.async-std]
version = "1.5"
features = ["attributes", "unstable"]
