[workspace]
members = [
    "racemus-mc",
    "racemus-binary",
    "racemus-tools",
    "racemus"
]

[profile.dev]
incremental = true
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
overflow-checks = true
panic = 'abort'

[profile.release]
incremental = false
opt-level = 3
debug = false
rpath = false
codegen-units = 1
lto = true
debug-assertions = false
overflow-checks = false
panic = 'abort'
