[package]
name = "racemus-binary"
version = "0.0.1"
authors = ["Jonathan Dickinson <oss@jcdickinson.me>"]
edition = "2018"

[dependencies]
racemus-buffer = { path = "../racemus-buffer" }

log = "0.4.8"
ring = "0.16.12"
aes = "0.3.2"
cfb8 = "0.3.2"
stream-cipher = "0.4.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
async-std = "1.5"
flate2 = "1.0"
cesu8 = "1.1"
