[package]
name = "racemus-mc"
version = "0.0.1"
authors = ["Jonathan Dickinson <oss@jcdickinson.me>"]
edition = "2018"

[dependencies]
ring = "0.16.12"
log = "0.4.8"
async-native-tls = "0.3.3"
url = "2.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
async-std = "1.5"
http-types = "1.1"
async-h1 = "1.1"
