[package]
name = "racemus"
version = "0.0.1"
authors = ["Jonathan Dickinson <oss@jcdickinson.me>"]
edition = "2018"

[dependencies]
racemus-mc = { path = "../racemus-mc" }
racemus-tools = { path = "../racemus-tools" }
racemus-binary = { path = "../racemus-binary" }

ring = "0.16.11"
log = "0.4.8"
pretty_env_logger = "0.4.0"
rand = "0.7.3"
http = "0.2.0"
async-trait = "0.1.24"
toml = "0.5.6"
vek = "0.9.12"
url = "2.1"
serde_json = "1.0"
surf = "1.0"
serde = "1.0"
serde_derive = "1.0"

[dependencies.async-std]
version = "1.5"
features = ["attributes", "unstable"]
