[package]
name = "racemus"
version = "0.0.1"
authors = ["Jonathan Dickinson <oss@jcdickinson.me>"]
edition = "2018"

[dependencies]
racemus-mc = { path = "../racemus-mc" }
racemus-tools = { path = "../racemus-tools" }
racemus-binary = { path = "../racemus-binary" }

ring = "0.16.13"
log = "0.4.8"
pretty_env_logger = "0.4.0"
rand = "0.7.3"
async-trait = "0.1.30"
toml = "0.5.6"
vek = "0.10.2"
serde = "1.0"
serde_derive = "1.0"
async-std = { version = "1.5", features = ["attributes", "unstable"] }

